fixed black artifacts on blurred cards

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -15,16 +15,12 @@ body {
       color: white;
     }
 
-    .app-blurred {
-      filter: blur(5px);
-    }
-
     .app::before {
       content: "";
       position: fixed;
       left: 0;
       right: 0;
-      z-index: -1;
+      z-index: -2;
       display: block;
       background-image: url("../../assets/images/background.jpg");
       background-size: cover;
