--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -40,6 +40,11 @@
 
     .footer-logo {
       font-size: 3em;
+
+      &:hover {
+        color: black;
+        text-shadow: 0.05em 0.05em 0.3em rgba(255,255,255,50%);
+      }
     }
   }
 }
